fix : fix the horizontal spacing of the home section in responsive

--- a/src/styles/app/_content.scss
+++ b/src/styles/app/_content.scss
@@ -1,6 +1,20 @@
 /* ========================
     HOME INTRO
 ======================== */
+@media screen and (max-width: 768px) and (min-height: 768px) {
+  .sections {
+    min-height: calc(100vh - 63px - 38px);
+    @include make-flex(center, center);
+  }
+}
+
+@include media-queries-up('md') {
+  .sections {
+    min-height: calc(100vh - 63px - 38px);
+    @include make-flex(center, center);
+  }
+}
+
 .home {
   @include make-css-grid(null, 1fr, 30px 0);
 
@@ -11,13 +25,13 @@
   overflow: hidden;
 
   @include media-queries-up('md') {
-    margin-bottom: rem(106);
+    margin-bottom: rem(0);
   }
 
   @include media-queries-up('md') {
     @include make-css-grid(null, 40% 60%, 30px);
 
-    margin-top: rem(170);
+    // margin-top: rem(170);
   }
 }
 
